--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
-    "presets": ["env"],
-    "plugins": ["transform-class-properties"]
-  }
+  "presets":[
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "6.10",
+        "browsers": ["last 2 versions"]
+      }
+      
+      
+      
+    }]
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
+}
