--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@barteh/machinize",
-  "version": "1.0.3",
+  "version": "1.0.301",
   "description": "a javascript library implements finite-state machine for application developement purpose ",
   "main": "index.js",
   "scripts": {
     "test": " npm run build && node ./lib/test",
-    "build": "babel src -d lib",
+    "build": "babel src -d lib && babel index.d.js -o index.js",
     "up": "npm publish --access public --scope=barteh"
   },
   "repository": {
