--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@barteh/machinize",
-  "version": "1.0.34",
+  "version": "1.0.35",
   "description": "a javascript library implements finite-state machine for application developement purpose ",
   "main": "index.js",
   "scripts": {
@@ -36,7 +36,7 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "babel-eslint": "^8.2.6",
     "eslint": "^5.2.0",
     "eslint-plugin-react": "^7.10.0"
